--- a/compose.yaml
+++ b/compose.yaml
@@ -2,8 +2,14 @@ services:
   postgres:
     image: 'postgres:latest'
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - 'POSTGRES_DB=buddy'
+      - 'POSTGRES_PASSWORD=rootroot'
+      - 'POSTGRES_USER=root'
     ports:
-      - '5432'
+      - '5432:5432'
+    volumes:
+      - ./src/main/resources/data/:/docker-entrypoint-initdb.d/
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
